# kaiba-scraper

./: README.md  mapped_data.json  matprat.no.json  pyproject.toml  trinesmatblogg.no.json
kaiba_scraper/: __main__.py  data_handlers.py
tests/: test_kaiba_scraper.py
